--- a/index.html
+++ b/index.html
@@ -548,7 +548,20 @@
           </div>
 
           <ul class="project-list">
+              <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://github.com/Aadim16/email_exten">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="images.png" alt="finance" loading="lazy">
+                </figure>
+                <h3 class="project-title">Automatic Email Generator</h3>
 
+                <p class="project-category">Java| Spring Boot| Maven</p>
+
+              </a>
+            </li>
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://github.com/Aadim16/Meet_me">
                 <figure class="project-img">
