--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="images.png" alt="finance" loading="lazy">
+                  <img src="Screenshot%202025-10-30%20185912.png" alt="finance" loading="lazy">
                 </figure>
                 <h3 class="project-title">Automatic Email Generator</h3>
 
