Update resume download link in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <p class="title">JAVA developer</p>
         <br>
-        <a href="https://drive.google.com/uc?export=download&id=1zhMuubpkrWJQ61qjObN_nEcKS2lQx01Q
+        <a href="https://drive.google.com/file/d/18yxazbOfyVuQHn5GPqeY-KqcMDd-9Q-a/view?usp=sharing?dl=1"
 ">
             <p class="title">Download My Resume</p>
         </a>
