Update resume link text from 'Download My Resume' to 'My Resume'

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <br>
         <a href="https://drive.google.com/file/d/18yxazbOfyVuQHn5GPqeY-KqcMDd-9Q-a/view?usp=sharing?dl=1"
 ">
-            <p class="title">Download My Resume</p>
+            <p class="title">My Resume</p>
         </a>
         
         </div>
